[package]
name = "chat_srv"
version = "0.6.8"
edition = "2024"
authors = ["Artur Gwoździowski"]

[dependencies]
anyhow = "1.0.102"
futures-channel = "0.3.32"
futures-util = "0.3.32"
shuttle-runtime = "0.57.0"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"

[build-dependencies]
embed-resource = "3.0.6"
